# fallen-person-detector

./: CMakeLists.txt  README.md  package.xml
launch/: simple.rviz
misc/: test_data.txt
src/: fallen_person_detector.cpp  fallen_person_detector.h  ground_floor_finder.cpp  ground_floor_finder.h  pcl_util.cpp  pcl_util.h  some_debug_code.txt
